--- a/NuGet.GdNet.Layers.AutoMapper/NuGet.GdNet.Layers.AutoMapper.csproj
+++ b/NuGet.GdNet.Layers.AutoMapper/NuGet.GdNet.Layers.AutoMapper.csproj
@@ -61,10 +61,7 @@
     <None Include="tools\install.ps1" />
     <None Include="tools\uninstall.ps1" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="content\" />
-    <Folder Include="src\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="lib\GdNet.Layers.AutoMapper.dll" />
     <Content Include="lib\GdNet.Layers.AutoMapper.pdb" />
