--- a/NuGet.GdNet.Layers.AutoMapper/Package.nuspec
+++ b/NuGet.GdNet.Layers.AutoMapper/Package.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>GdNet.Layers.AutoMapper</id>
-    <version>1.3.1</version>
+    <version>1.4.0</version>
     <title>GdNet.Layers.AutoMapper</title>
     <authors>RabbitSoftware</authors>
     <owners>junioho</owners>
@@ -10,6 +10,8 @@
       AutoMapper extensions
     </description>
     <releaseNotes>
+      V1.4.0 - DefaultEditableEntityDtoMapperFactory only ignores the map on Note, State, IsAvailable
+      
       Version 1.3.0
       - Update dependencies
       Version 1.2.0
@@ -25,8 +27,8 @@
     <copyright>Copyright @ RabbitSoftware 2015-2016</copyright>
     <dependencies>
       <group targetFramework="net40">
-        <dependency id="Mapping.AutoMapper" version="1.1.1" />
-        <dependency id="GdNet.Domain" version="2.0.2" />
+        <dependency id="Mapping.AutoMapper" version="1.1.2" />
+        <dependency id="GdNet.Domain" version="2.0.5" />
         <dependency id="GdNet.Layers.Dtos" version="2.0.0" />
       </group>
     </dependencies>
@@ -35,6 +37,5 @@
   <files>
     <file src="lib\" target="lib" />
     <file src="tools\" target="tools" />
-    <file src="content\" target="content" />
   </files>
 </package>
